# velez

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  LICENSE  Makefile  README.md  Taskfile.cicd.yml  Taskfile.scripts.yml  Taskfile.variables.yml  Taskfile.yml  cloudopser.py  pyproject.toml  requirements.txt  setup.py  terragrunt_ops.py  velez.py
.github/: dependabot.yml
.github/workflows/: PUSH-MASTER.yml  PUSH-OTHER.yml  auto-create-pull-request.yml  auto-pull-request-create.yml  auto-release-create.yml  automatic-release-create.yml  cron-check-dependencies.yml  cron-dependency-update.yml  manual-release-branch-prepare.yml  manual-release-create.yml  manual-sync-common-files.yml  manual-update-version.yml
tests/: test_docker_ops.py  test_file_ops.py  test_github_ops.py  test_terragrunt_ops.py  test_utils.py
velez/: docker_ops.py  file_ops.py  github_ops.py  terragrunt_ops.py  utils.py  velez.py
